--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Junior FC</title>
 </head>
 <body>
-    <h1>Club Deportivo Junior de Barranquilla</h1>
+    <h1>Club Deportivo Junior F.C.</h1>
     <h2>Pasión, historia y orgullo del Caribe colombiano</h2>
     <h3>Introducción</h3>
     <p>El Junior de Barranquilla es más que un club de fútbol: es una expresión viva de la identidad caribeña, de la alegría y el orgullo que caracterizan a la ciudad de Barranquilla. Fundado en 1924, el equipo ha construido una historia marcada por títulos, hazañas y una hinchada fiel que lo acompaña en cada partido con entusiasmo inquebrantable. A lo largo de los años, el Junior se ha consolidado como uno de los clubes más importantes del fútbol colombiano, símbolo de tradición y excelencia deportiva.</p>
